{
    "name": "InputMap",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "9f5b9d6e-832c-4642-bac8-7f0dcef51f14",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "e93b0298-4cb6-4e3c-acc4-d21cec5abfd1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c467185-1c62-44c3-b370-fb92b0b61b46",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}